--- a/views/paper_detail.html
+++ b/views/paper_detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap Admin</title>
+    <title>荟医 Admin</title>
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -27,12 +27,12 @@
 
     <div class="navbar">
         <div class="navbar-inner">
-			<a class="brand" href="papers"><span class="first">公司</span> <span class="second">名称</span></a>
+			<a class="brand" href="papers"><span class="first">公司</span> <span class="second">荟医</span></a>
 			
 			<ul class="nav pull-right">
 				<li id="fat-menu" class="dropdown">
 					<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-						<i class="icon-user"></i> Jack Smith
+						<i class="icon-user"></i> TODO User
 					</a>
 				</li>
 			</ul>
@@ -43,8 +43,8 @@
         <a href="#dashboard-menu" class="nav-header" data-toggle="collapse"><i class="icon-dashboard"></i>Dashboard</a>
 		
         <ul id="dashboard-menu" class="nav nav-list collapse in">
-            <li ><a href="papers">paper List</a></li>
-            <li ><a href="add_paper">add paper</a></li>
+            <li ><a href="papers">Paper List</a></li>
+            <li ><a href="add_paper">Add paper</a></li>
         </ul>
     </div>
 
