--- a/views/papers.html
+++ b/views/papers.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap Admin</title>
+    <title>荟医 Admin</title>
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -27,12 +27,12 @@
 
 		<div class="navbar">
 			<div class="navbar-inner">
-				<a class="brand" href="papers"><span class="first">公司</span> <span class="second">名称</span></a>
+				<a class="brand" href="papers"><span class="first">公司</span> <span class="second">荟医</span></a>
 
 				<ul class="nav pull-right">
 					<li id="fat-menu" class="dropdown">
 						<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-							<i class="icon-user"></i> Jack Smith
+							<i class="icon-user"></i> TODO User
 						</a>
 					</li>
 				</ul>
@@ -43,8 +43,8 @@
 			<a href="#dashboard-menu" class="nav-header" data-toggle="collapse"><i class="icon-dashboard"></i>Dashboard</a>
 
 			<ul id="dashboard-menu" class="nav nav-list collapse in">
-				<li ><a href="papers">paper List</a></li>
-				<li ><a href="add_paper">add paper</a></li>
+				<li><a href="papers">Paper List</a></li>
+				<li><a href="add_paper">Add Paper</a></li>
 			</ul>
 		</div>
     
@@ -53,90 +53,45 @@
     <div class="content">
         
         <div class="header">
-            
-            <h1 class="page-title">Users</h1>
+            <h1 class="page-title">Paper List</h1>
         </div>
         
-        <ul class="breadcrumb">
-            <li><a href="index">Home</a> <span class="divider">/</span></li>
-            <li class="active">Users</li>
-        </ul>
-
         <div class="container-fluid">
-            <div class="row-fluid">
-                    
-				<div class="btn-toolbar">
-					<button class="btn btn-primary"><i class="icon-plus"></i> Add Paper</button>
-				</div>
-				<div class="well">
-					<table class="table">
-					  <thead>
-						<tr>
-						  <th>#</th>
-						  <th>First Name</th>
-						  <th>Last Name</th>
-						  <th>Username</th>
-						  <th style="width: 26px;"></th>
-						</tr>
-					  </thead>
-					  <tbody>
-						<tr>
-						  <td>1</td>
-						  <td>Mark</td>
-						  <td>Tompson</td>
-						  <td>the_mark7</td>
-						  <td>
-							  <a href="paper"><i class="icon-pencil"></i></a>
-						  </td>
-						</tr>
-						<tr>
-						  <td>2</td>
-						  <td>Ashley</td>
-						  <td>Jacobs</td>
-						  <td>ash11927</td>
-						  <td>
-							  <a href="paper"><i class="icon-pencil"></i></a>
-						  </td>
-						</tr>
-						<tr>
-						  <td>3</td>
-						  <td>Audrey</td>
-						  <td>Ann</td>
-						  <td>audann84</td>
-						  <td>
-							  <a href="paper"><i class="icon-pencil"></i></a>
-						  </td>
-						</tr>
-					  </tbody>
-					</table>
-				</div>
-				<div class="pagination">
-					<ul>
-						<li><a href="#">Prev</a></li>
-						<li><a href="#">1</a></li>
-						<li><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">4</a></li>
-						<li><a href="#">Next</a></li>
-					</ul>
-				</div>
+					<div class="row-fluid">
 
-				<div class="modal small hide fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-						<h3 id="myModalLabel">Delete Confirmation</h3>
-					</div>
-					<div class="modal-body">
-						<p class="error-text"><i class="icon-warning-sign modal-icon"></i>Are you sure you want to delete the user?</p>
-					</div>
-					<div class="modal-footer">
-						<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-						<button class="btn btn-danger" data-dismiss="modal">Delete</button>
-					</div>
-				</div>  
+						<!--<div class="btn-toolbar">-->
+							<!--<button class="btn btn-primary"><i class="icon-plus"></i> Add Paper</button>-->
+						<!--</div>-->
 
-			
-            </div>
+						<div class="well">
+							<table class="table">
+								<thead>
+								<tr>
+									<th>试卷id</th>
+									<th>试卷标题</th>
+									<th>试卷描述</th>
+									<th>创建时间</th>
+									<th>修改时间</th>
+									<th>操作者</th>
+									<th style="width: 26px;"></th>
+								</tr>
+								</thead>
+								<tbody id="paper_list">
+								</tbody>
+							</table>
+						</div>
+						<!--<div class="pagination">-->
+							<!--<ul>-->
+								<!--<li><a href="#">Prev</a></li>-->
+								<!--<li><a href="#">1</a></li>-->
+								<!--<li><a href="#">2</a></li>-->
+								<!--<li><a href="#">3</a></li>-->
+								<!--<li><a href="#">4</a></li>-->
+								<!--<li><a href="#">Next</a></li>-->
+							<!--</ul>-->
+						<!--</div>-->
+
+					</div>
         </div>
     </div>
 	<footer>
@@ -148,10 +103,43 @@
 
     <script src="../lib/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript">
-        $("[rel=tooltip]").tooltip();
-        $(function() {
-            $('.demo-cancel-click').click(function(){return false;});
-        });
+			$(document).ready(function() {
+			  console.log('--------')
+				$.ajax({
+					type: 'POST',
+					dataType: 'json',
+					contentType: "application/json; charset=utf-8",
+					url: '/list_paper',
+					data: '',
+					success: function(result) {
+						if (result.code == 0) {
+						  generatePaperList(result.data)
+							return
+						}
+						alert('获取试卷信息失败')
+					}
+				})
+			})
+
+			function generatePaperList(papers) {
+			  var html = ''
+			  papers.forEach(function(paper) {
+          html += `<tr>
+					<td>${paper.id}</td>
+					<td>${paper.title}</td>
+					<td>${paper.desc}</td>
+					<td>${paper.created_time}</td>
+					<td>${paper.modified_time}</td>
+					<td>${paper.operator}</td>
+					<td>
+						<a href="get_paper?id=${paper.id}"><i class="icon-pencil"></i></a>
+					</td>
+				</tr>`
+				})
+				$("#paper_list").html(html);
+			}
+
+
     </script>
     
   </body>
