--- a/views/update_paper.html
+++ b/views/update_paper.html
@@ -52,7 +52,7 @@
 <div class="content">
 
   <div class="header">
-    <h1 class="page-title">Add Paper</h1>
+    <h1 class="page-title">Update Paper</h1>
   </div>
 
   <div class="container-fluid">
@@ -60,43 +60,58 @@
 
       <div class="well">
         <ul class="nav nav-tabs">
-          <li class="active"><a href="#add_paper_anchor" data-toggle="tab">Add Paper</a></li>
-          <li><a href="#add_question_anchor" data-toggle="tab">Add Question</a></li>
+          <% if (type == 'paper') { %>
+          <li class="active"><a href="#add_paper_anchor" data-toggle="tab">Update Paper</a></li>
+          <li><a href="#add_question_anchor" data-toggle="tab">Update Question</a></li>
+          <% } else { %>
+          <li ><a href="#add_paper_anchor" data-toggle="tab">Update Paper</a></li>
+          <li class="active"><a href="#add_question_anchor" data-toggle="tab">Update Question</a></li>
+          <% } %>
+
+
         </ul>
         <div id="myTabContent" class="tab-content">
 
-          <!--添加试卷-->
+          <!--update试卷-->
+          <% if (type == 'paper') { %>
           <div class="tab-pane active in" id="add_paper_anchor">
+          <% } else { %>
+          <div class="tab-pane fade" id="add_paper_anchor">
+          <% } %>
             <form id="tab">
               <label>试卷标题</label>
-              <input type="text" id="paper_title" value="" class="input-xlarge">
+              <input type="text" id="paper_title" value="<%= data.title %>" class="input-xlarge">
               <label>试卷描述</label>
-              <textarea id="paper_desc" value="" class="input-xlarge"></textarea>
+              <textarea id="paper_desc" class="input-xlarge"><%= data.desc %></textarea>
               <div>
-                <button id="add_paper" class="btn btn-primary">添加</button>
+                <button id="update_paper" class="btn btn-primary">更新</button>
               </div>
             </form>
           </div>
 
           <!--添加题目-->
+          <% if (type == 'question') { %>
+          <div class="tab-pane active in" id="add_question_anchor">
+          <% } else { %>
           <div class="tab-pane fade" id="add_question_anchor">
+          <% } %>
             <form id="tab2">
               <label>题干</label>
-              <textarea id="question_stem" value="" class="input-xlarge"></textarea>
+              <textarea id="question_stem" class="input-xlarge"><%= data.stem %></textarea>
               <label>选项1</label>
-              <input type="text" id="question_option1" class="input-xlarge">
+              <input type="text" id="question_option1" value="<%= data.option1 %>" class="input-xlarge">
               <label>选项2</label>
-              <input type="text" id="question_option2" class="input-xlarge">
+              <input type="text" id="question_option2" value="<%= data.option2 %>" class="input-xlarge">
               <label>选项3</label>
-              <input type="text" id="question_option3" class="input-xlarge">
+              <input type="text" id="question_option3" value="<%= data.option3 %>" class="input-xlarge">
               <label>选项4</label>
-              <input type="text" id="question_option4" class="input-xlarge">
+              <input type="text" id="question_option4" value="<%= data.option4 %>" class="input-xlarge">
               <label>正确答案</label>
-              <input type="text" id="question_answer" class="input-xlarge">
+              <input type="text" id="question_answer" value="<%= data.answer %>" class="input-xlarge">
               <label>分值</label>
-              <input type="text" id="question_score" class="input-xlarge">
+              <input type="text" id="question_score" value="<%= data.score %>" class="input-xlarge">
               <div>
-                <button id="add_question" class="btn btn-primary">添加</button>
+                <button id="update_question" class="btn btn-primary">更新</button>
               </div>
             </form>
           </div>
@@ -118,7 +133,7 @@
 <script src="../lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript">
   $(document).ready(function(){
-    $("#add_paper").click(function() {
+    $("#update_paper").click(function() {
       var paper = {
         title: $("#paper_title").val(),
         desc: $("#paper_desc").val(),
@@ -126,24 +141,23 @@
       $.ajax({
         type: 'POST',
         contentType: "application/json; charset=utf-8",
-        url: '/add_paper',
+        url: '/update_paper',
         data: JSON.stringify(paper),
         dataType: "json",
         success: function(data) {
           console.log("试卷内容:", data)
           if (data.code == 0) {
-            alert("试卷添加成功")
+            alert("试卷更新成功")
           }
           else {
-            alert("试卷添加失败")
+            alert("试卷更新失败")
           }
         }
       })
       return false
     })
 
-
-    $("#add_question").click(function() {
+    $("#update_question").click(function() {
       var question = {
         stem: $("#question_stem").val(),
         option1: $("#question_option1").val(),
@@ -156,15 +170,15 @@
       $.ajax({
         type: 'POST',
         contentType: "application/json; charset=utf-8",
-        url: '/add_question',
+        url: '/update_question',
         data: JSON.stringify(question),
         success: function(data) {
           console.log("题目内容:", data)
           if (data.code == 0) {
-            alert("题目添加成功")
+            alert("题目更新成功")
             return
           }
-          alert("题目添加失败")
+          alert("题目更新失败")
         }
       })
       return false
