--- a/views/update_paper.html
+++ b/views/update_paper.html
@@ -1,52 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>荟医 Admin</title>
-  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css">
-
-  <link rel="stylesheet" type="text/css" href="../stylesheets/theme.css">
-  <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.css">
-
-  <script src="../lib/jquery-1.7.2.min.js" type="text/javascript"></script>
-
-
-  <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-
-</head>
-
-<body class="">
-
-<div class="navbar">
-  <div class="navbar-inner">
-    <a class="brand" href="papers"><span class="first">公司</span> <span class="second">荟医</span></a>
-
-    <ul class="nav pull-right">
-      <li id="fat-menu" class="dropdown">
-        <a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-          <i class="icon-user"></i> TODO User
-        </a>
-      </li>
-    </ul>
-  </div>
-</div>
-
-<div class="sidebar-nav">
-  <a href="#dashboard-menu" class="nav-header" data-toggle="collapse"><i class="icon-dashboard"></i>Dashboard</a>
-
-  <ul id="dashboard-menu" class="nav nav-list collapse in">
-    <li><a href="papers">Paper List</a></li>
-    <li><a href="add_paper">Add Paper</a></li>
-  </ul>
-</div>
+<% include header.html %>
+<% include sidenav.html %>
 
 
 <div class="content">
@@ -64,7 +17,7 @@
           <li class="active"><a href="#add_paper_anchor" data-toggle="tab">Update Paper</a></li>
           <li><a href="#add_question_anchor" data-toggle="tab">Update Question</a></li>
           <% } else { %>
-          <li ><a href="#add_paper_anchor" data-toggle="tab">Update Paper</a></li>
+          <li><a href="#add_paper_anchor" data-toggle="tab">Update Paper</a></li>
           <li class="active"><a href="#add_question_anchor" data-toggle="tab">Update Question</a></li>
           <% } %>
 
@@ -88,52 +41,45 @@
               </div>
             </form>
           </div>
+            <!--update试卷 end-->
 
-          <!--添加题目-->
-          <% if (type == 'question') { %>
-          <div class="tab-pane active in" id="add_question_anchor">
-          <% } else { %>
-          <div class="tab-pane fade" id="add_question_anchor">
-          <% } %>
-            <form id="tab2">
-              <label>题干</label>
-              <textarea id="question_stem" class="input-xlarge"><%= data.stem %></textarea>
-              <label>选项1</label>
-              <input type="text" id="question_option1" value="<%= data.option1 %>" class="input-xlarge">
-              <label>选项2</label>
-              <input type="text" id="question_option2" value="<%= data.option2 %>" class="input-xlarge">
-              <label>选项3</label>
-              <input type="text" id="question_option3" value="<%= data.option3 %>" class="input-xlarge">
-              <label>选项4</label>
-              <input type="text" id="question_option4" value="<%= data.option4 %>" class="input-xlarge">
-              <label>正确答案</label>
-              <input type="text" id="question_answer" value="<%= data.answer %>" class="input-xlarge">
-              <label>分值</label>
-              <input type="text" id="question_score" value="<%= data.score %>" class="input-xlarge">
-              <div>
-                <button id="update_question" class="btn btn-primary">更新</button>
-              </div>
-            </form>
+            <!--update题目-->
+            <% if (type == 'question') { %>
+            <div class="tab-pane active in" id="add_question_anchor">
+            <% } else { %>
+            <div class="tab-pane fade" id="add_question_anchor">
+            <% } %>
+              <form id="tab2">
+                <label>题干</label>
+                <textarea id="question_stem" class="input-xlarge"><%= data.stem %></textarea>
+                <label>选项1</label>
+                <input type="text" id="question_option1" value="<%= data.option1 %>" class="input-xlarge">
+                <label>选项2</label>
+                <input type="text" id="question_option2" value="<%= data.option2 %>" class="input-xlarge">
+                <label>选项3</label>
+                <input type="text" id="question_option3" value="<%= data.option3 %>" class="input-xlarge">
+                <label>选项4</label>
+                <input type="text" id="question_option4" value="<%= data.option4 %>" class="input-xlarge">
+                <label>正确答案</label>
+                <input type="text" id="question_answer" value="<%= data.answer %>" class="input-xlarge">
+                <label>分值</label>
+                <input type="text" id="question_score" value="<%= data.score %>" class="input-xlarge">
+                <div>
+                  <button id="update_question" class="btn btn-primary">更新</button>
+                </div>
+              </form>
+            </div>
+            <!--update题目 end-->
           </div>
         </div>
-
       </div>
-
     </div>
   </div>
 </div>
 
-<footer>
-  <hr>
-  <p class="pull-right">for <a href="#" title="公司名称" target="_blank">公司名称</a></p>
-  <p>2017 <a href="#" target="_blank">lijingjing</a></p>
-</footer>
-
-
-<script src="../lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript">
-  $(document).ready(function(){
-    $("#update_paper").click(function() {
+  $(document).ready(function () {
+    $("#update_paper").click(function () {
       var paper = {
         title: $("#paper_title").val(),
         desc: $("#paper_desc").val(),
@@ -144,7 +90,7 @@
         url: '/update_paper',
         data: JSON.stringify(paper),
         dataType: "json",
-        success: function(data) {
+        success: function (data) {
           console.log("试卷内容:", data)
           if (data.code == 0) {
             alert("试卷更新成功")
@@ -157,7 +103,7 @@
       return false
     })
 
-    $("#update_question").click(function() {
+    $("#update_question").click(function () {
       var question = {
         stem: $("#question_stem").val(),
         option1: $("#question_option1").val(),
@@ -172,7 +118,7 @@
         contentType: "application/json; charset=utf-8",
         url: '/update_question',
         data: JSON.stringify(question),
-        success: function(data) {
+        success: function (data) {
           console.log("题目内容:", data)
           if (data.code == 0) {
             alert("题目更新成功")
@@ -186,7 +132,4 @@
   })
 </script>
 
-</body>
-</html>
-
-
+<% include footer.html %>
