--- a/views/papers.html
+++ b/views/papers.html
@@ -89,7 +89,7 @@
 				<a href="get_paper?id=${paper.id}"><i class="icon-pencil"></i></a>
 			</td>
 			<td>
-				<a href="questions?id=${paper.id}"><i class="icon-th-list"></i></a>
+				<a href="questions?paper_id=${paper.id}"><i class="icon-th-list"></i></a>
 			</td>
 			<td>
 				<a href="preview_paper?id=${paper.id}"><i class="icon-file"></i></a>
