--- a/views/update_paper.html
+++ b/views/update_paper.html
@@ -32,6 +32,7 @@
           <div class="tab-pane fade" id="add_paper_anchor">
           <% } %>
             <form id="tab">
+              <input type="hidden" id="paper_id" value="<%= data.id %>" class="input-xlarge">
               <label>试卷标题</label>
               <input type="text" id="paper_title" value="<%= data.title %>" class="input-xlarge">
               <label>试卷描述</label>
@@ -50,6 +51,7 @@
             <div class="tab-pane fade" id="add_question_anchor">
             <% } %>
               <form id="tab2">
+                <input type="hidden" id="question_id" value="<%= data.id %>" class="input-xlarge">
                 <label>题干</label>
                 <textarea id="question_stem" class="input-xlarge"><%= data.stem %></textarea>
                 <label>选项1</label>
@@ -64,6 +66,8 @@
                 <input type="text" id="question_answer" value="<%= data.answer %>" class="input-xlarge">
                 <label>分值</label>
                 <input type="text" id="question_score" value="<%= data.score %>" class="input-xlarge">
+                <label>所属试卷id</label>
+                <input type="text" id="question_paper_id" value="<%= data.paper_id %>" class="input-xlarge">
                 <div>
                   <button id="update_question" class="btn btn-primary">更新</button>
                 </div>
@@ -81,6 +85,7 @@
   $(document).ready(function () {
     $("#update_paper").click(function () {
       var paper = {
+        id: $("#paper_id").val(),
         title: $("#paper_title").val(),
         desc: $("#paper_desc").val(),
       }
@@ -105,6 +110,7 @@
 
     $("#update_question").click(function () {
       var question = {
+        id: $("#question_id").val(),
         stem: $("#question_stem").val(),
         option1: $("#question_option1").val(),
         option2: $("#question_option2").val(),
@@ -112,6 +118,7 @@
         option4: $("#question_option4").val(),
         answer: $("#question_answer").val(),
         score: $("#question_score").val(),
+        paper_id: $("#question_paper_id").val(),
       }
       $.ajax({
         type: 'POST',
