--- a/views/questions.html
+++ b/views/questions.html
@@ -12,9 +12,9 @@
 		<div class="container-fluid">
 			<div class="row-fluid">
 
-				<!--<div class="btn-toolbar">-->
-					<!--<button class="btn btn-primary"><i class="icon-plus"></i> Add Paper</button>-->
-				<!--</div>-->
+				<div class="btn-toolbar">
+					<button class="btn btn-primary" id="add_question"><i class="icon-plus"></i> Add Question</button>
+				</div>
 
 				<div class="well">
 					<table class="table">
@@ -22,16 +22,17 @@
 						<tr>
 							<th>题目id</th>
 							<th>题干</th>
-							<th>选项1</th>
-							<th>选项2</th>
-							<th>选项3</th>
-							<th>选项4</th>
+							<th>A</th>
+							<th>B</th>
+							<th>C</th>
+							<th>D</th>
 							<th>正确答案</th>
 							<th>分值</th>
 							<th>创建时间</th>
 							<th>修改时间</th>
 							<th>操作者</th>
-							<th style="width: 16px;"></th>
+							<th style="width: 26px;">编辑</th>
+							<th style="width: 26px;">删除</th>
 						</tr>
 						</thead>
 						<tbody id="question_list">
@@ -56,7 +57,6 @@
 <script src="../lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript">
 	$(document).ready(function() {
-		console.log('--------')
 		$.ajax({
 			type: 'POST',
 			dataType: 'json',
@@ -71,11 +71,32 @@
 				alert('获取试卷信息失败')
 			}
 		})
+
+		$("#add_question").click(function() {
+			window.location.href = '/add_question?paper_id=' + $("#paper_id").val()
+		})
 	})
 
 	function generateQuestionList(questions) {
 		var html = ''
 		questions.forEach(function(question) {
+		  var answer = question.answer
+		  switch(question.answer) {
+				case 'option1':
+          answer = 'A'
+					break
+        case 'option2':
+          answer = 'B'
+          break
+        case 'option3':
+          answer = 'C'
+          break
+        case 'option4':
+          answer = 'D'
+          break
+			}
+
+
 			html += `<tr>
 			<td>${question.id}</td>
 			<td>${question.stem}</td>
@@ -83,7 +104,7 @@
 			<td>${question.option2}</td>
 			<td>${question.option3}</td>
 			<td>${question.option4}</td>
-			<td>${question.answer}</td>
+			<td>${answer}</td>
 			<td>${question.score}</td>
 			<td>${question.created_time}</td>
 			<td>${question.modified_time}</td>
@@ -91,9 +112,33 @@
 			<td>
 				<a href="get_question?id=${question.id}"><i class="icon-pencil"></i></a>
 			</td>
+			<td>
+				<a class="delete_question" href="" id="${question.id}"><i class="icon-remove"></i></a>
+			</td>
 		</tr>`
 		})
 		$("#question_list").html(html);
+
+		$(".delete_question").click(function() {
+      var r = confirm("确定要删除题目");
+      if (r) {
+        $.ajax({
+          type: 'GET',
+          contentType: "application/json; charset=utf-8",
+          url: '/delete_question?id=' + this.id,
+          data: '',
+          success: function (data) {
+            if (data.code == 0) {
+              alert("题目删除成功")
+              location.reload()
+              return
+            }
+            alert("题目删除失败")
+          }
+				})
+      }
+			return false
+		})
 	}
 
 
