--- a/views/update_paper.html
+++ b/views/update_paper.html
@@ -13,24 +13,15 @@
 
       <div class="well">
         <ul class="nav nav-tabs">
-          <% if (type == 'paper') { %>
           <li class="active"><a href="#add_paper_anchor" data-toggle="tab">Update Paper</a></li>
-          <li><a href="#add_question_anchor" data-toggle="tab">Update Question</a></li>
-          <% } else { %>
-          <li><a href="#add_paper_anchor" data-toggle="tab">Update Paper</a></li>
-          <li class="active"><a href="#add_question_anchor" data-toggle="tab">Update Question</a></li>
-          <% } %>
+          <!--<li><a href="#add_question_anchor" data-toggle="tab">Update Question</a></li>-->
 
 
         </ul>
         <div id="myTabContent" class="tab-content">
 
           <!--update试卷-->
-          <% if (type == 'paper') { %>
           <div class="tab-pane active in" id="add_paper_anchor">
-          <% } else { %>
-          <div class="tab-pane fade" id="add_paper_anchor">
-          <% } %>
             <form id="tab">
               <input type="hidden" id="paper_id" value="<%= data.id %>" class="input-xlarge">
               <label>试卷标题</label>
@@ -44,36 +35,6 @@
           </div>
             <!--update试卷 end-->
 
-            <!--update题目-->
-            <% if (type == 'question') { %>
-            <div class="tab-pane active in" id="add_question_anchor">
-            <% } else { %>
-            <div class="tab-pane fade" id="add_question_anchor">
-            <% } %>
-              <form id="tab2">
-                <input type="hidden" id="question_id" value="<%= data.id %>" class="input-xlarge">
-                <label>题干</label>
-                <textarea id="question_stem" class="input-xlarge"><%= data.stem %></textarea>
-                <label>选项1</label>
-                <input type="text" id="question_option1" value="<%= data.option1 %>" class="input-xlarge">
-                <label>选项2</label>
-                <input type="text" id="question_option2" value="<%= data.option2 %>" class="input-xlarge">
-                <label>选项3</label>
-                <input type="text" id="question_option3" value="<%= data.option3 %>" class="input-xlarge">
-                <label>选项4</label>
-                <input type="text" id="question_option4" value="<%= data.option4 %>" class="input-xlarge">
-                <label>正确答案</label>
-                <input type="text" id="question_answer" value="<%= data.answer %>" class="input-xlarge">
-                <label>分值</label>
-                <input type="text" id="question_score" value="<%= data.score %>" class="input-xlarge">
-                <label>所属试卷id</label>
-                <input type="text" id="question_paper_id" value="<%= data.paper_id %>" class="input-xlarge">
-                <div>
-                  <button id="update_question" class="btn btn-primary">更新</button>
-                </div>
-              </form>
-            </div>
-            <!--update题目 end-->
           </div>
         </div>
       </div>
@@ -103,35 +64,6 @@
           else {
             alert("试卷更新失败")
           }
-        }
-      })
-      return false
-    })
-
-    $("#update_question").click(function () {
-      var question = {
-        id: $("#question_id").val(),
-        stem: $("#question_stem").val(),
-        option1: $("#question_option1").val(),
-        option2: $("#question_option2").val(),
-        option3: $("#question_option3").val(),
-        option4: $("#question_option4").val(),
-        answer: $("#question_answer").val(),
-        score: $("#question_score").val(),
-        paper_id: $("#question_paper_id").val(),
-      }
-      $.ajax({
-        type: 'POST',
-        contentType: "application/json; charset=utf-8",
-        url: '/update_question',
-        data: JSON.stringify(question),
-        success: function (data) {
-          console.log("题目内容:", data)
-          if (data.code == 0) {
-            alert("题目更新成功")
-            return
-          }
-          alert("题目更新失败")
         }
       })
       return false
