--- a/views/update_question.html
+++ b/views/update_question.html
@@ -20,44 +20,43 @@
             <!--update题目-->
             <div class="tab-pane active in" id="add_question_anchor">
               <form id="tab2">
-                <input type="hidden" id="question_id" value="<%= data.id %>" class="input-xlarge">
-                <label>题干:</label>
-                <textarea id="question_stem" class="input-xlarge"><%= data.stem %></textarea>
-                <label>A:</label>
-                <input type="text" id="question_option1" value="<%= data.option1 %>" class="input-xlarge">
-                <label>B:</label>
-                <input type="text" id="question_option2" value="<%= data.option2 %>" class="input-xlarge">
-                <label>C:</label>
-                <input type="text" id="question_option3" value="<%= data.option3 %>" class="input-xlarge">
-                <label>D:</label>
-                <input type="text" id="question_option4" value="<%= data.option4 %>" class="input-xlarge">
-                <label>正确答案:</label>
-                <select name="" id="question_answer" class="input-xlarge">
-                  <% if (data.answer == 'option1') { %>
-                  <option value="option1" selected>A</option>
-                  <% } else { %>
-                  <option value="option1">A</option>
-                  <% } %>
+                <input type="hidden" id="question_id" value="<%= data.id %>" class="input-xlarge"><br>
+                题干:&nbsp;
+                <textarea id="question_stem" class="input-xlarge"><%= data.stem %></textarea><br>
+                A:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <input type="text" id="question_option1" value="<%= data.option1 %>" class="input-xlarge"><br>
+                B:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <input type="text" id="question_option2" value="<%= data.option2 %>" class="input-xlarge"><br>
+                C:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <input type="text" id="question_option3" value="<%= data.option3 %>" class="input-xlarge"><br>
+                D:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <input type="text" id="question_option4" value="<%= data.option4 %>" class="input-xlarge"><br><br>
+                正确答案&nbsp;:
+                <% if (data.answer.indexOf('option1') > -1) { %>
+                A &nbsp;<input type="checkbox" name="question_answer" value="option1" checked>
+                <% } else { %>
+                A &nbsp;<input type="checkbox" name="question_answer" value="option1">
+                <% } %>
 
-                  <% if (data.answer == 'option2') { %>
-                  <option value="option2" selected>B</option>
-                  <% } else { %>
-                  <option value="option2">B</option>
-                  <% } %>
+                <% if (data.answer.indexOf('option2') > -1) { %>
+                B &nbsp;<input type="checkbox" name="question_answer" value="option2" checked>
+                <% } else { %>
+                B &nbsp;<input type="checkbox" name="question_answer" value="option2">
+                <% } %>
 
-                  <% if (data.answer == 'option3') { %>
-                  <option value="option3" selected>C</option>
-                  <% } else { %>
-                  <option value="option3">C</option>
-                  <% } %>
+                <% if (data.answer.indexOf('option3') > -1) { %>
+                C &nbsp;<input type="checkbox" name="question_answer" value="option3" checked>
+                <% } else { %>
+                C &nbsp;<input type="checkbox" name="question_answer" value="option3">
+                <% } %>
 
-                  <% if (data.answer == 'option4') { %>
-                  <option value="option4" selected>D</option>
-                  <% } else { %>
-                  <option value="option4">D</option>
-                  <% } %>
-                </select>
-                <label>分值:</label>
+                <% if (data.answer.indexOf('option4') > -1) { %>
+                D &nbsp;<input type="checkbox" name="question_answer" value="option4" checked>
+                <% } else { %>
+                D &nbsp;<input type="checkbox" name="question_answer" value="option4">
+                <% } %>
+                <br/><br/>
+                分值: &nbsp;
                 <input type="text" id="question_score" value="<%= data.score %>" class="input-xlarge">
                 <div>
                   <button id="update_question" class="btn btn-primary">更新</button>
@@ -75,6 +74,10 @@
 <script type="text/javascript">
   $(document).ready(function () {
     $("#update_question").click(function () {
+      var answer = []
+      $('input[name="question_answer"]:checked').each(function(){
+        answer.push($(this).val());
+      })
       var question = {
         id: $("#question_id").val(),
         stem: $("#question_stem").val(),
@@ -82,7 +85,7 @@
         option2: $("#question_option2").val(),
         option3: $("#question_option3").val(),
         option4: $("#question_option4").val(),
-        answer: $("#question_answer").val(),
+        answer: answer.join(','),
         score: $("#question_score").val(),
       }
       $.ajax({
