--- a/views/add_question.html
+++ b/views/add_question.html
@@ -21,24 +21,24 @@
           <!--添加题目-->
           <div class="tab-pane active in" id="add_question_anchor">
             <form id="tab2">
-              <label>题干:</label>
-              <textarea id="question_stem" value="" class="input-xlarge"></textarea>
-              <label>A:</label>
-              <input type="text" id="question_option1" class="input-xlarge">
-              <label>B:</label>
-              <input type="text" id="question_option2" class="input-xlarge">
-              <label>C:</label>
-              <input type="text" id="question_option3" class="input-xlarge">
-              <label>D:</label>
-              <input type="text" id="question_option4" class="input-xlarge">
-              <label>正确答案:</label>
-              <select name="" id="question_answer" class="input-xlarge">
-                <option value="option1">A</option>
-                <option value="option2">B</option>
-                <option value="option3">C</option>
-                <option value="option4">D</option>
-              </select>
-              <label>分值:</label>
+              题干:&nbsp;
+              <textarea id="question_stem" value="" class="input-xlarge"></textarea><br>
+              A:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <input type="text" id="question_option1" class="input-xlarge"><br>
+              B:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <input type="text" id="question_option2" class="input-xlarge"><br>
+              C:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <input type="text" id="question_option3" class="input-xlarge"><br>
+              D:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <input type="text" id="question_option4" class="input-xlarge"><br><br>
+              正确答案&nbsp;:
+              A &nbsp;<input type="checkbox" name="question_answer" value="option1">
+              B &nbsp;<input type="checkbox" name="question_answer" value="option2">
+              C &nbsp;<input type="checkbox" name="question_answer" value="option3">
+              D &nbsp;<input type="checkbox" name="question_answer" value="option4">
+
+              <br/><br/>
+              分值: &nbsp;
               <input type="text" id="question_score" class="input-xlarge" value="3">
               <div>
                 <button id="add_question" class="btn btn-primary">添加</button>
@@ -56,30 +56,33 @@
 <script type="text/javascript">
   $(document).ready(function(){
     $("#add_question").click(function() {
+      var answer = []
+      $('input[name="question_answer"]:checked').each(function(){
+        answer.push($(this).val());
+      })
       var question = {
         stem: $("#question_stem").val(),
         option1: $("#question_option1").val(),
         option2: $("#question_option2").val(),
         option3: $("#question_option3").val(),
         option4: $("#question_option4").val(),
-        answer: $("#question_answer").val(),
+        answer: answer.join(','),
         score: $("#question_score").val(),
         paper_id: $("#paper_id").val(),
       }
-      console.log(question)
-//      $.ajax({
-//        type: 'POST',
-//        contentType: "application/json; charset=utf-8",
-//        url: '/add_question',
-//        data: JSON.stringify(question),
-//        success: function(data) {
-//          if (data.code == 0) {
-//            alert("题目添加成功")
-//            return
-//          }
-//          alert("题目添加失败")
-//        }
-//      })
+      $.ajax({
+        type: 'POST',
+        contentType: "application/json; charset=utf-8",
+        url: '/add_question',
+        data: JSON.stringify(question),
+        success: function(data) {
+          if (data.code == 0) {
+            alert("题目添加成功")
+            return
+          }
+          alert("题目添加失败")
+        }
+      })
       return false
     })
   })
