--- a/views/add_paper.html
+++ b/views/add_paper.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 </div>
-
+</div>
 <script type="text/javascript">
   $(document).ready(function(){
     $("#add_paper").click(function() {
@@ -64,5 +64,3 @@
 </script>
 
 <% include footer.html %>
-
-
